# xcelerator-solver

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
examples/: README.md
examples/01_simple_linear/: README.md  solver.toml
examples/01_simple_linear/data/: train.csv  val.csv
examples/02_quadratic/: README.md  solver.toml
examples/02_quadratic/data/: train.csv  val.csv
examples/03_multivariate/: README.md  solver.toml
examples/03_multivariate/data/: train.csv  val.csv
examples/04_pinned_terms/: README.md  solver.toml
examples/04_pinned_terms/data/: train.csv  val.csv
examples/05_special_functions/: README.md  solver.toml
examples/05_special_functions/data/: train.csv  val.csv
src/: aggregator.rs  config.rs  csv_loader.rs  error_metric.rs  eval.rs  eval_hp.rs  evaluator.rs  expr.rs  generator.rs  hp.rs  lib.rs  main.rs  output.rs  pinned.rs  pipeline.rs  vocabulary.rs
tests/: integration.rs
tests/fixtures/: bad_row_train.csv  linear_train.csv  linear_val.csv  multivar_train.csv  quadratic_train.csv
